fixed styling for start and continue buttons on mobile

--- a/client/src/Home/ContinueSurveyButton.css
+++ b/client/src/Home/ContinueSurveyButton.css
@@ -8,6 +8,8 @@
 }
 @media only screen and (max-width: 575px) {
   #continue-survey-button {
+    width: 100%;
+
     margin-bottom: 1rem;
   }
 }
