--- a/client/src/Home/StartSurveyButton.css
+++ b/client/src/Home/StartSurveyButton.css
@@ -8,5 +8,6 @@
 }
 @media only screen and (max-width: 575px) {
   #start-survey-button {
+    width: 100%;
   }
 }
